Pass const int* instead of timeval* for LDAP_OPT_TIMELIMIT

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Security 2022-12-12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When LDAP_OPT_TIMELIMIT is set, OpenLDAP casts the value provided to a const int* (see here). Currently, we pass in the address to timeout, which is of type timeval

      We should pass the correct type here to avoid unexpected behavior due to casting.

            Assignee:
            Militsa Sotirova
            Reporter:
            Varun Ravichandran
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: