SERVER-71606 Pass const int* instead of timeval* for LDAP_OPT_TIMELIMIT

GitOrigin-RevId: 23bf1977ab458221edebcc1574e3d267dfcdadfd